--- a/src/Components/Dashboard/Dashboard.module.css
+++ b/src/Components/Dashboard/Dashboard.module.css
@@ -7,55 +7,16 @@ body{
     background: #f4f8fc;
 }
 
-.Dashboard img{
-    position: relative;
-    display: inline-block;
-}
-.Dashboard > div img:first-child{
-    z-index: 2;
-    height: 10%;
-    width: 10%;
-    left: 20px;
-}
-
-.Dashboard > div img:last-child{
-    width: 100%;
-    height: 300px;
-    top: -50px;
-}
-.Dashboard button{
-    position: relative;
-    top: -70px;
-    left: 1090px;
-    
-}
-
-.Content{
+.Nav{
     display: flex;
     justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
+    margin-top: 20px;
 }
 
-.Content nav{
+.Nav nav{
     flex-basis: 30%;
 }
 
-.Content nav ul{
-    list-style: none;
-    margin: 0;
-}
-
-.Content nav a{
-    text-decoration: none;
-    color: #000;
-    font-size: 20px;
-    background: #fff;
-    padding: 10px;
-    display: block;
-    margin-bottom: 1px;
-}
-
-.Content >div{
+.Nav >div{
     flex-basis: 65%;
 }
