--- a/src/Containers/Dashboard/Buzz/NewBuzz/NewBuzz.module.css
+++ b/src/Containers/Dashboard/Buzz/NewBuzz/NewBuzz.module.css
@@ -1,5 +1,5 @@
 .NewBuzz{
-  margin-bottom: 1rem;
+  margin-bottom: 16px;
   font-size: 0.9rem;
   border: 1px solid #aaa;
   box-shadow: 0 0 5px #ccc;
@@ -9,18 +9,18 @@
   display: flex;
   align-items: center;
   background-color: #ddd;
-  font-weight: bold;
-  padding: 0.6rem 0.2rem;
+  padding: 10px 3px;
+  font-size: 16px;
 }
 
 .Form{
   display: block;
   width: 100%;
-  height: 4rem;
-  padding: 0.3rem;
+  height: 64px;
+  padding: 5px;
   margin-bottom: 0;
   border: none;
-  font-size: 0.9rem;
+  font-size: 16px;
 }
 
 .FormFooter{
@@ -28,7 +28,7 @@
   justify-content: space-between;
   background-color: white;
   border-top: 0.5px solid #aaa;
-  padding: 0.3rem 1rem;
+  padding: 3px 16px;
   align-items: center;
 }
 
@@ -39,28 +39,28 @@
 
 .Category{
   background: none;
-  min-height: 1.5rem;
-  margin-right: 1rem;
+  min-height: 24px;
+  margin-right: 16px;
 }
 
 .ImageButton{
-  font-size: 2rem;
+  font-size: 32px;
   color: #aaa;
 }
 
 .ImageButton:hover{
-  color: rgb(126, 122, 122);
+  color: #7e7a7a;
   cursor: pointer;
 }
 
 .ImageName{
-  margin: 0 0.5rem;
+  margin: 0 8px;
   color: #2f4f4f;
 }
 
 .SubmitButton {
-  color: rgb(255, 115, 0);
-  font-size: 2rem;
+  color: #ff7300;
+  font-size: 32px;
   transform: rotate(45deg);
   background: none;
   border: none;
@@ -69,5 +69,5 @@
 }
 
 .SubmitButton:hover{
-  color: orangered;
+  color: #ff4500;
 }
