--- a/src/Containers/Dashboard/Complaints/NewComplaint/NewComplaint.module.css
+++ b/src/Containers/Dashboard/Complaints/NewComplaint/NewComplaint.module.css
@@ -3,58 +3,56 @@
   border-radius: 5px;
   box-shadow: 0 0 4px #ccc;
   background-color: white;
-  font-size: 0.9rem;
+  font-size: 15px;
   margin-bottom: 30px;
 }
 
-.Header{
-  display: flex;
-  align-items: center;
+.NewComplaint h4{
   background-color: #ddd;
-  font-weight: bold;
-  padding: 0.6rem 1rem;
+  padding: 10px 16px;
+  font-size: 17px;
 }
 
 .FormRow{
   display: flex;
   justify-content: space-between;
-  margin-bottom: 1rem;
-  padding: 0 1rem;
+  margin-bottom: 16px;
+  padding: 0 16px;
 }
 
 .TextAreaRow{
-  margin: 1.5rem 0;
-  padding: 0 1rem;
-  margin-bottom: 0.6rem;
+  margin: 24px 0;
+  padding: 0 16px;
+  margin-bottom: 10px;
 }
 
 .ImageUploadRow{
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  margin: 1rem 0;
-  padding: 0 1rem;
+  margin: 16px 0;
+  padding: 0 16px;
 }
 
 .ImageButton{
-  font-size: 2rem;
+  font-size: 32px;
   color: #aaa;
 }
 
 .ImageButton:hover{
-  color: rgb(126, 122, 122);
+  color: #7e7a7a;
   cursor: pointer;
 }
 
 .ImageName{
-  margin: 0 0.5rem;
-  color: darkslategray;
+  margin: 0 8px;
+  color: #2f4f4f;
 }
 
 .SubmitRow{
   display: flex;
-  margin: 1rem 0;
-  padding: 0 1rem;
+  margin: 16px 0;
+  padding: 0 16px;
   flex-direction: row-reverse;
 }
 
@@ -62,7 +60,7 @@
   padding: 10px 30px;
   background-color: #e0dbdb;
   color:#ff0019;
-  font-size: 0.9rem;
+  font-size: 16px;
   border-radius: 3px;
   border: 1px solid #ccc;
   outline: none;
