--- a/src/Containers/Home/Home.module.css
+++ b/src/Containers/Home/Home.module.css
@@ -38,3 +38,14 @@
     font-size: 28px;
     margin-right: 10px;
 }
+
+@media(max-width:600px){
+    .Login{
+        padding: 20px 40px;
+    }
+    
+    .Login a{
+        flex-direction: column;
+        padding: 10px;
+    }
+}
