added from validations

--- a/src/Containers/Dashboard/Complaints/NewComplaint/NewComplaint.module.css
+++ b/src/Containers/Dashboard/Complaints/NewComplaint/NewComplaint.module.css
@@ -71,3 +71,9 @@
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
+
+.SubmitButton:disabled{
+  cursor: not-allowed;
+  color: #fff;
+  background: #ccc;
+}
