--- a/src/Components/UI/BuzzView/BuzzView.module.css
+++ b/src/Components/UI/BuzzView/BuzzView.module.css
@@ -3,7 +3,11 @@
 }
 
 .Action{
-    align-self: flex-end;
+    display: flex;
+    justify-content: space-between;
+}
+
+.LikeDislike{
     display: flex;
 }
 
@@ -78,6 +82,18 @@
 .Image img{
     height: 100%;
     width: 100%;
+}
+
+.Comment{
+    width: 90%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    display: inline-block;
+    justify-self: center;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    outline: none;
 }
 
 @media(max-width:600px){
