--- a/src/Components/UI/BuzzView/BuzzView.module.css
+++ b/src/Components/UI/BuzzView/BuzzView.module.css
@@ -5,6 +5,7 @@
 .Action{
     display: flex;
     justify-content: space-between;
+    border-bottom: 1px solid #ccc;
 }
 
 .LikeDislike{
@@ -82,18 +83,6 @@
 .Image img{
     height: 100%;
     width: 100%;
-}
-
-.Comment{
-    width: 90%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 15px;
-    display: inline-block;
-    justify-self: center;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    outline: none;
 }
 
 @media(max-width:600px){
