--- a/src/Containers/Dashboard/Comments/Comments.module.css
+++ b/src/Containers/Dashboard/Comments/Comments.module.css
@@ -33,11 +33,22 @@
     align-items: center;
 }
 
+.NewComment > div{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid #ccc;
+    width: 100%;
+    border-radius: 15px;
+    align-items: center;
+    padding-right: 10px;
+}
+
 .NewComment input{
     width: 92%;
-    padding: 10px;
-    border: 1px solid #ccc;
+    outline: none;
+    border: none;
     border-radius: 15px;
+    padding: 10px;
 }
 
 .NewComment button{
@@ -53,6 +64,12 @@
     cursor: pointer;
 }
 
+.NewComment span{
+    color: #808080;
+    padding: 0 5px;
+    font-size: 15px;
+}
+
 .ReplySection{
     margin-left: 50px;
 }
@@ -61,4 +78,14 @@
     padding: 5px 10px;
     font-size: 12px;
     color: #808080;
+}
+
+.ImageButton{
+    color: #808080;
+    font-size: 20px;
+}
+
+.ImageButton:hover{
+    color: #000;
+    cursor: pointer;
 }
