--- a/src/Containers/Dashboard/Replies/Replies.module.css
+++ b/src/Containers/Dashboard/Replies/Replies.module.css
@@ -1,3 +1,9 @@
+.Replies p{
+    padding: 5px 10px;
+    font-size: 12px;
+    color: #808080;
+}
+
 .Replies p:hover{
     text-decoration: underline;
     cursor: pointer;
@@ -35,7 +41,6 @@
 .ReplyBox > div p:last-child{
     color: #808080;
 }
-
 
 .NewReply{
     display: flex;
