--- a/src/Containers/Dashboard/SuperAdmin/SuperAdmin.module.css
+++ b/src/Containers/Dashboard/SuperAdmin/SuperAdmin.module.css
@@ -2,6 +2,9 @@
     background: #fff;
     margin-bottom: 30px;
     border: 1px solid #ccc;
+    border: 1px solid #ccc;
+    border-radius: 7px;
+    box-shadow: 0 0 4px #ccc;
 }
 
 .AddUser h3{
@@ -47,8 +50,8 @@
     display: block;
     margin: 15px auto;
     padding: 10px 30px;
-    border: 1px solid #ccc;
-    border-radius: 15px;
+    border: 1px solid #808080;
+    border-radius: 7px;
     font-size: 16px;
     color: #ff0019;
     background: #ccc;
@@ -100,3 +103,18 @@
     border: 1px solid #ddd;
     border-top: none;
 }
+
+.SuperAdmin button{
+    margin: 7px;
+    border: none;
+    background: none;
+    font-size: 14px;
+    color: #333333;
+    font-weight: 600;
+}
+
+.SuperAdmin button:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
