--- a/src/Containers/Dashboard/SuperAdmin/SuperAdmin.module.css
+++ b/src/Containers/Dashboard/SuperAdmin/SuperAdmin.module.css
@@ -24,13 +24,13 @@
     color: #616060;
 }
 
-.SuperAdmin table tbody tr:nth-child(odd){
+/* .SuperAdmin table tbody tr:nth-child(odd){
     background: #fff;
 }
 
 .SuperAdmin table tbody tr:nth-child(even){
     background: #f1f1f1
-}
+} */
 
 .SuperAdmin table td, .SuperAdmin table th{
     text-align: center;
