--- a/src/Containers/Dashboard/SuperAdmin/EditUser/EditUser.module.css
+++ b/src/Containers/Dashboard/SuperAdmin/EditUser/EditUser.module.css
@@ -4,33 +4,31 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 200;
-    height: 70%;
     width: 400px;
     max-width: 70%;
     background: #fff;
-    border: 1px solid#808080
+    border: 1px solid#808080;
+    border-radius: 7px;
 }
 
 .EditUser h3{
     background: #cfcfcf;
     color: #000;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
 }
 
 .EditUser form{
-    height: 70%;
-    width: 80%;
-    margin: 45px auto;
-    padding: 20px;
+    padding: 30px;
+    height: 400px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid #ccc;
-    box-shadow: 0 0 10px #ccc;
+    justify-content: space-around;
+    align-items: flex-start;
 }
 
 .EditUser input{
-    width: 80%;
+    width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -48,18 +46,35 @@
     outline: none;
 }
 
+.EditUser p{
+    color: #ff0000;
+    font-size: 12px;
+}
+
+.Button{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 .EditUser button{
     width: 100px;
     padding: 7px 0;
     font-size: 16px;
-    margin: 20px 10px;
-    align-self: flex-start;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #808080;
     outline: none;
+    background: #ccc;
+    color: #ff0019;
+    font-weight: 400;
 }
 
 .EditUser button:hover{
     cursor: pointer;
-    background: #ccc;
+    background: #e4e3e3;
+}
+
+.EditUser button:disabled{
+    cursor: not-allowed;
+    color: #fff;
 }
