--- a/src/Containers/Dashboard/SuperAdmin/SuperAdmin.module.css
+++ b/src/Containers/Dashboard/SuperAdmin/SuperAdmin.module.css
@@ -16,16 +16,23 @@
     text-align: center;
     padding: 20px 16px;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .AddUser form > div{
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: space-around;
+}
+
+.AddUser form > div > div{
+    width: 47%;
+    display: flex;
+    flex-direction: column;
 }
 
 .Input{
-    width: 47%;
+    width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -44,6 +51,12 @@
     margin: 10px;
     padding: 10px;
     outline: none;
+    width: 35%;
+}
+
+.AddUser p{
+    color: #ff0000;
+    font-size: 12px;
 }
 
 .AddUser button{
@@ -57,6 +70,8 @@
     background: #ccc;
     outline: none;
 }
+
+
 
 .AddUser button:hover{
     cursor: pointer;
