fixed a few styling issue

--- a/src/Containers/Dashboard/SuperAdmin/SuperAdmin.module.css
+++ b/src/Containers/Dashboard/SuperAdmin/SuperAdmin.module.css
@@ -117,3 +117,11 @@
     border-top: none;
 }
 
+.SuperAdmin tr:nth-child(odd){
+    background: #fff;
+}
+
+.SuperAdmin tr:nth-child(even){
+    background: #f1f1f1
+}
+
