--- a/src/Containers/Dashboard/SuperAdmin/SuperAdmin.module.css
+++ b/src/Containers/Dashboard/SuperAdmin/SuperAdmin.module.css
@@ -25,8 +25,12 @@
     justify-content: space-around;
 }
 
-.AddUser form > div > div{
-    width: 47%;
+.Name > div{
+    width: 48%;
+}
+
+.AddUser form > div:last-of-type > div{
+    width: 31%;
     display: flex;
     flex-direction: column;
 }
@@ -51,7 +55,12 @@
     margin: 10px;
     padding: 10px;
     outline: none;
-    width: 35%;
+    width: 100%;
+}
+
+.Select:disabled{
+    background: #ccc;
+    cursor: not-allowed;
 }
 
 .AddUser p{
