--- a/src/Containers/Dashboard/SuperAdmin/SuperAdmin.module.css
+++ b/src/Containers/Dashboard/SuperAdmin/SuperAdmin.module.css
@@ -23,10 +23,18 @@
     justify-content: space-around;
 }
 
-.AddUser form > div > div{
+.AddUser form > div:first-of-type > div{
     width: 47%;
     display: flex;
     flex-direction: column;
+    
+}
+
+.AddUser form > div:nth-of-type(2) > div{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .Input{
@@ -49,7 +57,12 @@
     margin: 10px;
     padding: 10px;
     outline: none;
-    width: 35%;
+    width: 100%;
+}
+
+.Select:disabled{
+    background: #ccc;
+    cursor: not-allowed;
 }
 
 .Gender{
