--- a/src/Components/UI/BuzzView/BuzzView.module.css
+++ b/src/Components/UI/BuzzView/BuzzView.module.css
@@ -90,6 +90,21 @@
     width: 100%;
 }
 
+.Manipulate button{
+    background: none;
+    border: none;
+    outline: none;
+    padding: 5px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #808080;
+}
+
+.Manipulate button:hover{
+    color: #000;
+    cursor: pointer;
+}
+
 @media(max-width:600px){
 
     .BuzzDetails{
