--- a/src/Containers/Dashboard/SuperAdmin/SuperAdmin.module.css
+++ b/src/Containers/Dashboard/SuperAdmin/SuperAdmin.module.css
@@ -15,8 +15,6 @@
 .AddUser form{
     text-align: center;
     padding: 20px 16px;
-    flex-direction: column;
-    align-items: center;
     justify-content: space-between;
 }
 
@@ -25,10 +23,18 @@
     justify-content: space-around;
 }
 
-.AddUser form > div > div{
+.AddUser form > div:first-of-type > div{
     width: 47%;
     display: flex;
     flex-direction: column;
+    
+}
+
+.AddUser form > div:nth-of-type(2) > div{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .Input{
@@ -51,7 +57,39 @@
     margin: 10px;
     padding: 10px;
     outline: none;
-    width: 35%;
+    width: 100%;
+}
+
+.Select:disabled{
+    background: #ccc;
+    cursor: not-allowed;
+}
+
+.Gender{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin: 10px 0 20px 20px;
+    color: #616060;
+}
+
+.Gender > div{
+    display: flex;
+    width: 100%;
+}
+
+.Gender >div > div{
+    flex-basis: 30%;
+    display: flex;
+    justify-content:flex-start;
+    align-items: center;
+    margin: 5px 0;
+}
+
+.AddUser input[type='radio']{
+    margin: 0 5px;
+    width: 20px;
 }
 
 .AddUser p{
