--- a/src/Containers/Dashboard/Buzz/ShowBuzz/ShowBuzz.module.css
+++ b/src/Containers/Dashboard/Buzz/ShowBuzz/ShowBuzz.module.css
@@ -5,13 +5,22 @@
     margin-bottom: 50px;
 }
 
-.ShowBuzz h4{
+.Header{
+    display: flex;
+    justify-content: space-between;
     background: #ddd;
     padding: 10px;
 }
 
-.ShowBuzz > div {
-    display: flex;
-    flex-direction: column;
+.Header button{
+    background: none;
+    border: none;
+    outline: none;
+    font-size: 15px;
+}
+
+.Header button:hover{
+    color: #ff0019;
+    cursor: pointer;
 }
 
