--- a/src/Containers/Home/Home.module.css
+++ b/src/Containers/Home/Home.module.css
@@ -39,6 +39,24 @@
     margin-right: 10px;
 }
 
+.Login > div{
+    margin-top: 20px;
+    display: flex;
+    padding: 15px 30px;
+    background: #db1111;
+    color: #fff;
+}
+
+.Login > div a{
+    padding: 0;
+    margin: 0 3px;
+}
+
+.Login div a:hover{
+    background: #db1111;
+    text-decoration: underline;
+}
+
 @media(max-width:600px){
     .Login{
         padding: 20px 40px;
