Worked on login backend

--- a/src/Containers/Login/Login.module.css
+++ b/src/Containers/Login/Login.module.css
@@ -31,10 +31,17 @@
     padding: 10px 5px;
     border: 1px solid #a3a3a3;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 7px;
     font-size: 15px;
     background: transparent;
     border-radius: 5px;
+    outline: none;
+}
+
+.Login p{
+    color: #ff0019;
+    margin-bottom: 10px;
+    font-size: 12px;
 }
 
 .Login button{
@@ -46,6 +53,7 @@
     border: none;
     color: #fff;
     font-size: 16px;
+    outline: none;
 }
 .Login button a{
     color: #fff;
