--- a/src/Containers/Dashboard/Complaints/YourComplaints/YourComplaints.module.css
+++ b/src/Containers/Dashboard/Complaints/YourComplaints/YourComplaints.module.css
@@ -6,8 +6,29 @@
     width: 100%;
 }
 
-.YourComplaints h4{
+.YourComplaints > div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 10px 16px;
+}
+
+.YourComplaints > div > div{
+    display: flex;
+    justify-content: space-between;
+    width: 7%;
+}
+
+.YourComplaints > div > div button{
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 16px;
+}
+
+.YourComplaints > div > div button:hover{
+    color: #4e4e4e;
+    cursor: pointer;
 }
 
 .YourComplaints table{
