worked on infinite scroll and lazy loading of comments

--- a/src/Containers/Dashboard/Comments/Comments.module.css
+++ b/src/Containers/Dashboard/Comments/Comments.module.css
@@ -84,3 +84,25 @@
     color: #000;
     cursor: pointer;
 }
+
+.LoadMoreComments{
+    text-align: center;
+}
+
+.LoadMoreComments button{
+    border: none;
+    background: transparent;
+    outline: none;
+    margin: 0 auto;
+    font-weight: 700;
+}
+
+.LoadMoreComments button:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.LoadMoreComments p{
+    font-size: 15px;
+    color: #ff0019;
+}
