--- a/src/Containers/Dashboard/Complaints/YourComplaints/YourComplaints.module.css
+++ b/src/Containers/Dashboard/Complaints/YourComplaints/YourComplaints.module.css
@@ -6,8 +6,23 @@
     width: 100%;
 }
 
-.YourComplaints h4{
+.YourComplaints > div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 10px 16px;
+}
+
+.YourComplaints > div select{
+    background: none;
+    border: none;
+    outline: none;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.YourComplaints > div select:hover{
+    cursor: pointer;
 }
 
 .YourComplaints table{
@@ -49,6 +64,21 @@
 
 .InProgress{
     color: #1d0866;
+}
+
+.CreatedOn button{
+    border: none;
+    outline: none;
+    background: none;
+    padding: 0 1px;
+}
+.CreatedOn button:hover{
+    color: #ff0019;
+    cursor: pointer;
+}
+
+.CreatedOn span{
+    padding: 0 5px;
 }
 
 @media(max-width:600px){
