--- a/src/Containers/Recovery/Recovery.module.css
+++ b/src/Containers/Recovery/Recovery.module.css
@@ -1,4 +1,4 @@
-.Login{
+.Recovery{
     position: fixed;
     top: 50%;
     left: 50%;
@@ -10,7 +10,7 @@
     
 }
 
-.Login h3{
+.Recovery h3{
    padding-bottom: 20px;
 }
 
@@ -20,14 +20,14 @@
     height: 100vh;
 }
 
-.Login form{
+.Recovery form{
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 0 10px;
 }
 
-.Login input{
+.Recovery input{
     padding: 10px 5px;
     border: 1px solid #a3a3a3;
     width: 100%;
@@ -38,13 +38,13 @@
     outline: none;
 }
 
-.Login p{
+.Recovery p{
     color: #ff0019;
     margin-bottom: 10px;
     font-size: 12px;
 }
 
-.Login button{
+.Recovery button{
     padding: 10px 15px;
     width: 50%;
     align-self: center;
@@ -55,17 +55,17 @@
     font-size: 16px;
     outline: none;
 }
-.Login button a{
+.Recovery button a{
     color: #fff;
     text-decoration: none;
 }
 
-.Login button:hover{
+.Recovery button:hover{
     background: #ff0019;
     cursor: pointer;
 }
 
-.Login a{
+.Recovery a{
     color:#000;
     text-decoration: none;
     font-size: 14px;
