--- a/src/Containers/Recovery/ChangePassword/ChangePassword.module.css
+++ b/src/Containers/Recovery/ChangePassword/ChangePassword.module.css
@@ -1,4 +1,4 @@
-.Login{
+.ChangePassword{
     position: fixed;
     top: 50%;
     left: 50%;
@@ -10,24 +10,24 @@
     
 }
 
-.Login h3{
+.ChangePassword h3{
    padding-bottom: 20px;
 }
 
 .BackgroundImage{
-    background: url('../../assets/to-the-new-office.jpg') center center/cover no-repeat;
+    background: url('../../../assets/to-the-new-office.jpg') center center/cover no-repeat;
     filter: blur(5px);
     height: 100vh;
 }
 
-.Login form{
+.ChangePassword form{
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 0 10px;
 }
 
-.Login input{
+.ChangePassword input{
     padding: 10px 5px;
     border: 1px solid #a3a3a3;
     width: 100%;
@@ -38,13 +38,13 @@
     outline: none;
 }
 
-.Login p{
+.ChangePassword p{
     color: #ff0019;
     margin-bottom: 10px;
     font-size: 12px;
 }
 
-.Login button{
+.ChangePassword button{
     padding: 10px 15px;
     width: 50%;
     align-self: center;
@@ -55,17 +55,17 @@
     font-size: 16px;
     outline: none;
 }
-.Login button a{
+.ChangePassword button a{
     color: #fff;
     text-decoration: none;
 }
 
-.Login button:hover{
+.ChangePassword button:hover{
     background: #ff0019;
     cursor: pointer;
 }
 
-.Login a{
+.Recovery a{
     color:#000;
     text-decoration: none;
     font-size: 14px;
